--- a/index.html
+++ b/index.html
@@ -75,59 +75,48 @@
 
         <section class="section section-projects" id="section-projects">
             <h2>Projetos</h2>
-            <p class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis tempora explicabo
-                quae
-                quod deserunt eius sapiente</p>
+            <p class="subtitle">Projetos feitos durante a minha formação na Softex-PE</p>
 
             <ul>
                 <li>
                     <div class="project-img">
-                        <img style="width: 100%;" src="./assets/project-mockup-example.jpeg" alt="Project mockup">
+                        <img style="width: 100%;" src="./assets/e-commerce.png" alt="Project mockup">
                     </div>
                     <div class="project-content">
-                        <h3>Projeto 1</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-                            tempora, explicabo
-                            quae quod
-                            deserunt eius sapiente praesentium.</p>
-                        <a class="btn">Case study</a>
+                        <h3>e-Commerce</h3>
+                        <p class="paragraph">site e-commerce feito em grupo, utilizando TypeScript, HTML, CSS e
+                            Bootstrap
+                        </p>
+                        <a href="https://ytech-e-commerce.netlify.app" target="_blank" class="btn">acessar</a>
                     </div>
                 </li>
 
                 <li>
                     <div class="project-img">
-                        <img style="width: 100%;" src="./assets/project-mockup-example.jpeg" alt="Project mockup">
+                        <img style="width: 100%;" src="./assets/Calculadora.png" alt="Project mockup">
                     </div>
                     <div class="project-content">
-                        <h3>Projeto 2</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-                            tempora, explicabo
-                            quae quod
-                            deserunt eius sapiente praesentium.</p>
-                        <a class="btn">Case study</a>
+                        <h3>Calculadora Web</h3>
+                        <p class="paragraph">Calculadora funcional usando HTML, CSS e Javascript</p>
+                        <a href="https://yakinfsilva.github.io/calculadora-web/" target=”_blank” class="btn">acessar</a>
                     </div>
                 </li>
 
                 <li>
                     <div class="project-img">
-                        <img style="width: 100%;" src="./assets/project-mockup-example.jpeg" alt="Project mockup">
+                        <img style="width: 100%;" src="./assets/jogo-da-forca.png" alt="Project mockup">
                     </div>
                     <div class="project-content">
-                        <h3>Projeto 3</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-                            tempora, explicabo
-                            quae quod
-                            deserunt eius sapiente praesentium.</p>
-                        <a class="btn">Case study</a>
+                        <h3>Jogo da Forca</h3>
+                        <p class="paragraph">jogo da forca feito usando HTML, CSS e Javascript</p>
+                        <a href="https://yakinfsilva.github.io/jogo-da-forca--/" target="_blank" class="btn">acessar</a>
                     </div>
                 </li>
             </ul>
         </section>
         <section id="section-contact" class="section section-contact">
             <h2>Contact</h2>
-            <p class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis tempora explicabo
-                quae
-                quod deserunt eius sapiente</p>
+            <p class="subtitle">(apenas demonstrativo)</p>
             <form>
                 <div>
                     <label for="nome">
@@ -160,8 +149,6 @@
         <div class="footer-top">
             <div class="footer-top-content">
                 <h4>Yakin Silva</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit facilis tempora explicabo quae quod deserunt
-                </p>
             </div>
 
             <div>
