--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li>TypeScript</li>
                         <li>Github</li>
                         <li>SCSS</li>
-                        <li></li>
+
                     </ul>
                 </div>
             </div>
@@ -157,6 +157,8 @@
                     <a href="https://github.com/YakinFsilva" target="_blank"><i class="fa fa-github"
                             aria-hidden="true"></i></a>
                     <a href="https://www.instagram.com/nikay.jpg/" target="_blank"><i class="fa fa-instagram"
+                            aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/yakinsilva" target="_blank"><i class="fa fa-linkedin"
                             aria-hidden="true"></i></a>
                 </div>
             </div>
