--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <main>
         <section class="section section-home">
             <h1>OLÁ, MEU NOME É YAKIN SILVA</h1>
-            <p></p>
-            <p>Cursando ADS e Fronted</p>
+            <p>Cursando ADS e Frontend</p>
 
             <div><a class="btn" href="">PROJECTS</a></div>
         </section>
@@ -48,12 +47,8 @@
             <div class="section-about-me-content">
                 <div>
                     <h3>Get to know me!</h3>
-                    <p class="paragraph" style="margin-bottom: 10px">Meu nome é Yakin Ferreira da Silva, nasci em João
-                        Pessoa-PB, mas passei boa parte da minha infancia em Recife-PE. </p>
-                    <p class="paragraph">I'm a bit of a digital product junky. Over the years, I've
-                        used hundreds of web and
-                        mobile apps in
-                        different industries and verticals. Feel free to contact me here.</p>
+                    <p class="paragraph" style="margin-bottom: 10px">Formado em Programação pela Softex e atualmente estudando o 3ֻº período do curso de Análise e Desenvolvimento de Sistemas, nasci em João Pessoa- PB no ano de 2004. </p>
+                    <p class="paragraph"></p>
                     <a href="" class="btn" style="margin-top: 30px;">contact</a>
                 </div>
 
